All changes by Craig Miller cvmiller at gmail dot com

12 May 2018			v6disc.sh (2.0) v4disc.sh (0.99.3) ip_em.sh (0.95)
	Added MacOS X (BSD) support using the IP command emulator (ip_em_sh)
	Improved operation of -D (dual stack) on MacOS X

9 May 2018			 v6disc.sh (1.5) 
	Added OUI lookup to v6disc.sh (was already in v4disc.sh)

25 December 2016	v4disc.sh	v0.94
	Added offline OUI lookup, script will use wireshark_oui.gz if available

29 March 2017		v1.4
	Added -D (dual stack) option for Link-Local operation

18 November 2016	v1.3
	Used ping6 GUA source rather than link-local for discovery
		This pickes up DHCPV6 and RFC 7217 addresses
	Removed code to detect router & neighbour cache (no longer required)
	Improved printing of columns

31 October 2016		v1.2
	Happy Halloween
	Added avahi/bonjour search for IPv6 hosts (if avahi is installed)

13 April 2016		v1.1
	Added colour headings, and NDP table lookup

18 March 2016		v1.0
	Added GPL banner to script
	
3 January 2016 		v.96
	Happy New Year
	Added nmap scanning of link-local only networks with -L -N
		For networks which have no global prefix (e.g. IPv6 not turned on)
		Fixed interaction with nmap version 5.x
		Added '-F' or fast parameter to nmap to speed up the scan
			This can be changed in variable $nmap_options
	Removed old README, refer to README.md for current info
	
31 December 2015	v0.95
	Fixed typo from bash arithmetic clean up

30 December 2015	v0.94
	Cleaned up comments
	Changed bash arithmetic conditionals to new form (better performance)

29 December 2015	v0.93
	Changed ping6 of ff02::1 to work with older (2.6) linux systems


26 December 2015	v4disc.sh v0.91
	Added support for IPv4 cidr /23, /24, /25 networks
	Updated README.md with new support

23 December 2015	v0.92
	Added nmap option -N
		When root, nmap will add -O (OS identification)

22 December 2015	v0.91
	Added support for VLAN based interfaces
	Fixed duplicate prefix detection (when static IPv6 address used)

17 December 2015 	v0.90